# nofriction-meetings

./: .env.example  LICENSE  README.md  baseline_build_log.txt  build_log.txt  bump_version.js  final_build_log.txt  fix_imports.py  increment-version.js  move_files.sh  package-lock.json  package.json
.github/workflows/: release-macos.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPER_GUIDE.md  RELEASE_RUNBOOK.md  SUPABASE_SETUP.md  USER_GUIDE.md  intelligent-data-access.md
scripts/: release-macos.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility_capture.rs  accessibility_extractor.rs  admin_commands.rs  ai_client.rs  ambient_capture.rs  attendee_intel.rs  audit_log.rs  calendar_client.rs  capture_engine.rs  capture_metrics.rs  catch_up_agent.rs  chunk_manager.rs  clustering.rs  commands.rs  commands_ingest.rs  continue_prompt.rs  data_editor.rs  database.rs  dedupe_gate.rs  deepgram_client.rs  diff_builder.rs  dork_mode.rs  env_config.rs  episode_builder.rs  frame_extractor.rs  ingest_client.rs  ingest_queue.rs  interaction_loop.rs  lib.rs  live_intel_agent.rs  main.rs  meeting_intel.rs  meeting_notes.rs  meeting_trigger.rs  menu_builder.rs  obsidian_vault.rs  pinecone_client.rs  power_manager.rs  privacy_filter.rs  prompt_manager.rs  (+12 more)
src-tauri/src/transcription/: deepgram.rs  gemini.rs  gladia.rs  google_stt.rs  mod.rs
src/components/: AIChat.tsx  AISettings.tsx  ActivityTimeline.tsx  AdminConsole.tsx  AlwaysOnSettings.tsx  AmbientTimeline.tsx  AuditLog.tsx  CommandPalette.tsx  ComparisonLab.tsx  CopilotPanel.tsx  EntitiesView.tsx  FullSettings.tsx  GenieView.tsx  GlobalErrorBoundary.tsx  Help.tsx  IngestSettings.tsx  InsightsView.tsx  KBSearch.tsx  KnowledgeBaseSettings.tsx  LearnedDataEditor.tsx  LiveTranscript.tsx  MeetingDetailView.tsx  MeetingDetectionBanner.tsx  MeetingHistory.tsx  MeetingIntelPanel.tsx  PermissionsStatus.tsx  PromptBrowser.tsx  PromptLibrary.tsx  RecordingControls.tsx  RecordingsLibrary.tsx  RewindGallery.tsx  RewindTab.css  (+14 more)
(+31 files in other folders)
