[package]
name = "nofriction-meetings"
version = "2.8.0"
description = "noFriction Meetings - Professional meeting transcription for macOS"
authors = ["noFriction AI"]
edition = "2021"
license = "MIT"

[lib]
name = "nofriction_meetings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket for Deepgram
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
http = "1"

# Audio capture - using fork with ScreenCaptureKit support for system audio
cpal = { git = "https://github.com/Kree0/cpal.git", branch = "master" }

# Screen capture
xcap = "0.8"
image = "0.25"

# Database (SQLite local + Postgres for Supabase)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
url = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
bytemuck = { version = "1", features = ["derive"] }
directories = "5"
anyhow = "1"
rand = "0.9"
reqwest = { version = "0.13.1", features = ["json", "multipart", "stream"] }
urlencoding = "2.1"
dotenvy = "0.15"
dirs = "6.0.0"
async-trait = "0.1.89"
rusqlite = { version = "0.29", features = ["bundled"] }
tempfile = "3.8"

# macOS native frameworks
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
cocoa = "0.25"
core-foundation = "0.9"
core-graphics = "0.23"
dispatch = "0.2"
# Modern objc2 ecosystem for Vision/EventKit
objc2 = "0.5"
objc2-foundation = "0.2"
block2 = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
